json update deployment scripts

--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
+  "homepage": "http://cs-mmeza.github.io/portfolio-web/",
   "name": "porfolio-web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -19,6 +22,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "gh-pages": "^6.1.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
   }
